# onesmallstep

./: .gitignore  README.md  index.html  package-lock.json  package.json  server.js  tailwind.config.js  tsconfig.json  vite.config.js  vitest.config.ts
__tests__/: server.test.js
docs/video-walk-through/: youtube-link.txt
orbital_calculations/: moon_orbit.py  requirements.txt  saturn_v_orbit_orientiation.py
public/: apollo11_mission.czml  apollo11_mission_descent.czml  saturn_v_trajectory_with_delay.czml
public/models/csm/: csm.gltf
public/models/csm_lm/: csmlm.gltf
public/models/lm/: lunarmodule.gltf  lunarmodule_up.gltf
public/models/saturnv/: saturnv.gltf
ragc/dsky-protocol/: Cargo.toml
ragc/dsky-protocol/src/: lib.rs
ragc/ragc/: Cargo.toml
ragc/ragc-binaries/: Cargo.toml
ragc/ragc-binaries/src/: lib.rs
ragc/ragc-core/: Cargo.toml
ragc/ragc-core/src/: consts.rs  cpu.rs  decoder.rs  lib.rs  utils.rs
ragc/ragc-core/src/instructions/: instructions.rs  mod.rs
ragc/ragc-peripherals/: Cargo.toml
ragc/ragc-peripherals/src/: lib.rs  utils.rs
ragc/ragc-peripherals/src/vagc/: downrupt.rs  dsky.rs
ragc/ragc/src/: main.rs
ragc/yaDSKY2/: yaDSKY2  yaDSKY2.cpp  yaDSKY2.h
src/: App.jsx  index.css  main.jsx  vite-env.d.ts
src/__tests__/: App.test.jsx
src/components/: AgcConnectionIndicator.jsx  EarthScene.tsx  HomeScreen.jsx  LoadingScreen.jsx  MissionChecklist.tsx  MoonScene.tsx
src/components/__tests__/: AgcConnectionIndicator.test.jsx  HomeScreen.test.jsx  LoadingScreen.test.jsx  MissionChecklist.test.jsx
src/helper/: getWebGlStub.js
(+9 files in other folders)
